# cypherbench

./: .gitignore  README.md  pyproject.toml  run_eval.sh
cypherbench/: evaluate.py  neo4j_connector.py
cypherbench/baseline/: utils.py  zero_shot_nl2cypher.py
cypherbench/metrics/: execution_accuracy.py  provenance_subgraph_jaccard_similarity.py
docker/: run_eval_sequential.sh  run_eval_sequential_apptainer.sh  start_neo4j_sampled_apptainer.sh  start_neo4j_test_apptainer.sh  start_neo4j_train_apptainer.sh  stop_neo4j_sampled_apptainer.sh  stop_neo4j_test_apptainer.sh  stop_neo4j_train_apptainer.sh
docker/neo4j-with-loader/: Dockerfile  README.md  neo4j-with-loader.def  requirements.txt
docker/neo4j-with-loader/scripts/: entrypoint.sh  loader.py  schema.py
scripts/: merge_eval_results.py  wait_for_graph.py
